# django-light-auth

./: .pre-commit-config.yaml  README.md  build_package.sh  pyproject.toml  setup.py
django_light_auth/: __init__.py  apps.py  runtimes.py  views.py
django_light_auth/templates/django_light_auth/: login.html
example/: settings.py  urls.py  views.py
requirements/: base.txt
requirements.d/: base.txt  dev.txt
